# rust-app-bootstrap

./: .env.example  .envrc.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  buildspec.yaml  docker-compose.yaml  lefthook.yml  samconfig.toml  template.yaml
.docker/: config.json
api/: Cargo.toml
api/src/: graphql.rs  main.rs  playground.rs
api/src/graphql/: admin.rs  data_loader.rs  errors.rs  service.rs
api/src/graphql/admin/: query.rs
api/src/graphql/data_loader/: order.rs  user.rs
api/src/graphql/service/: mutation.rs  query.rs
api/src/graphql/service/types/: order.rs  user.rs
api/src/graphql/shared/: types.rs
api/src/graphql/shared/types/: enum_value.rs
app/: Cargo.toml
app/src/: adapter.rs  domain.rs  env.rs  errors.rs  infra.rs  lib.rs  model.rs
app/src/domain/: admin_user.rs  order.rs  string.rs  types.rs  user.rs
app/src/domain/order/: detail.rs
app/src/domain/types/: asset_key.rs  email.rs  image_size.rs  s3_key.rs  string.rs  task.rs
app/src/infra/: cloudfront.rs  cognito.rs  firebase.rs  lambda.rs  log.rs  rdb.rs  s3.rs  sns.rs  sqs.rs  ssm.rs
app/src/infra/cognito/: errors.rs  types.rs
app/src/infra/firebase/: auth.rs  mock.rs
app/src/infra/lambda/: types.rs
app/src/infra/rdb/: errors.rs  repository.rs  session_manager.rs
app/src/infra/rdb/repository/: order.rs  order_detail.rs  user.rs
app/src/infra/rdb/types/: mod.rs  order.rs  order_detail.rs  order_details.rs  orders.rs  prelude.rs  user.rs  users.rs
app/src/infra/sns/: types.rs
app/src/model/: string.rs  task.rs
async_sns_fn/: Cargo.toml
async_sqs_fn/: Cargo.toml
async_sqs_fn/src/: main.rs
async_task/: Cargo.toml
async_task/src/: main.rs
batch_fn/: Cargo.toml
batch_fn/src/: main.rs
batch_task/: Cargo.toml
batch_task/src/: main.rs
cfn/: README.md  aurora.yaml  bastion.yaml  cloudfront.yaml  code-pipeline.yaml  cognito.yaml  network.yaml  rds.yaml  s3.yaml  sns.yaml  sqs.yaml  ssm.yaml
core/: Cargo.toml
core/src/: ddb.rs  domain.rs  env.rs  errors.rs  infra.rs  lib.rs  rdb.rs  s3.rs  ssm.rs
core/src/ddb/: condition.rs  cursor.rs
core/src/domain/: order.rs  string.rs  time.rs  user.rs
core/src/domain/order/: detail.rs
core/src/infra/: lambda.rs  s3.rs  ses.rs
core/src/infra/rdb/: session_manager.rs
core/src/infra/s3/: types.rs
core/src/rdb/: session_manager.rs
core/src/rdb/types/: order.rs  order_detail.rs  user.rs
core/src/s3/: errors.rs
domain/: Cargo.toml
domain/src/: error.rs  errors.rs  lib.rs  macros.rs  model.rs  types.rs
domain/src/macros/: error.rs  string_model.rs
domain/src/model/: id.rs  user.rs
domain/src/models/: order.rs  user.rs
domain/src/models/order/: detail.rs
domain/src/types/: order.rs  time.rs  user.rs
domain/src/types/order/: detail.rs
graphql/: Cargo.toml
graphql/src/: api.rs  error.rs  errors.rs  lib.rs
graphql/src/api/: mutation.rs  query.rs  types.rs
graphql/src/api/types/: order.rs  user.rs
graphql/src/shared/: types.rs
image-optimizer/: Makefile  README.md  package.json  samconfig.dev.toml  template.yml
image-optimizer/src/: index.js
migration/: Cargo.toml
migration/src/: lib.rs  m20250907_074340_create_table_order_details.rs  m20250907_074340_create_table_orders.rs  m20250907_074340_create_table_users.rs  m20250907_074340_create_users.rs  m20250907_074341_create_orders.rs  m20250907_074341_create_table_orders.rs  m20250907_074342_create_order_details.rs  m20250907_074342_create_table_order_details.rs  main.rs
migrations/: 20250601160117_create_users_table.up.sql  20250601160158_create_orders_table.up.sql  20250601160236_create_order_details_table.down.sql  20250601160236_create_order_details_table.up.sql
rdb/: Cargo.toml  README.md  diesel.toml
rdb/migrations/2025-04-28-095421_create_users/: up.sql
rdb/migrations/2025-04-29-135833_create_orders/: up.sql
rdb/migrations/2025-04-29-140650_create_order_details/: down.sql  up.sql
rdb/src/: lib.rs  schema.rs  session_manager.rs  types.rs
rdb/src/macros/: repository.rs
rdb/src/types/: order.rs  order_detail.rs  user.rs
src/: main.rs
sync_fn/: Cargo.toml
sync_fn/src/: main.rs
sync_task/: Cargo.toml
sync_task/src/: main.rs
