[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }
derive_more = { version = "2", features = ["full"] }
base-62 = "0.1"
rand = "0.9"
chrono = "0.4"
unicode-segmentation = "1"
once_cell = "1.21"
aws-config = "1.6"
aws-sdk-ssm = "1.80"
aws-sdk-s3 = "1.91"
aws-sdk-lambda = "1.83"
aws-sdk-sns = "1.73"
aws-sdk-sqs = "1.53"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv-parser = "0.1"
bytes = "1.10.1"
email_address = "0.2.4"
http = "1.3"
tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2.14"