[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
derive_more = { version = "2", features = ["full"] }
base-62 = "0.1"
rand = "0.9"
chrono = "0.4"
unicode-segmentation = "1"
once_cell = "1.21"
aws-config = "1.6"
aws-types = "1.3"
aws-sdk-ssm = "1.80"
aws-sdk-s3 = "1.91"
aws-sdk-dynamodb = "1.79"
aws-sdk-lambda = "1.83"
aws-sdk-sns = "1.73"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
