[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
derive_more = { version = "2", features = ["full"] }
base-62 = "0.1"
rand = "0.9"
chrono = "0.4"
unicode-segmentation = "1"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
email_address = "0.2.4"