[package]
name = "graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
rdb = { path = "../rdb" }
domain = { path = "../domain" }
async-trait = "0.1"
actix-web = "4"
async-graphql = { version = "7", features = ["dataloader", "log", "tracing"] }
async-graphql-actix-web = "7"
async-graphql-value = "7"
derive_more = "2"
